--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>COLORS</title>
 </head>
 <body>
+    <table id="field"></table>
     <script src="./colors.js"></script>
 </body>
 </html>
